--- a/templates/_head.html
+++ b/templates/_head.html
@@ -6,9 +6,9 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title></title>
+    <title>{{ title }}</title>
 
-    <link rel="apple-touch-icon" href="/assets/images/apple-icon-touch.png">
+    <link rel="apple-touch-icon" href="{{ BASE_URL }}assets/images/apple-icon-touch.png">
     <!-- Missing?
         <link rel="icon" href="https://bonsai.uno/wp-content/themes/bonsai/favicon.ico">
     -->
@@ -25,7 +25,7 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
       })(document);
     </script>
-    <link href="/css/fontello.css" rel="stylesheet">
+    <link href="{{ BASE_URL }}css/fontello.css" rel="stylesheet">
 
     <!-- This site is optimized with the Yoast SEO plugin v9.4 - https://yoast.com/wordpress/plugins/seo/ -->
     <link rel="canonical" href="https://bonsai.uno/" />
@@ -47,11 +47,11 @@
         <link rel="alternate" type="application/rss+xml" title="BONSAI &raquo; Home Comments Feed" href="https://bonsai.uno/home/feed/" />
     -->
 
-    <link rel='stylesheet' id='wp-block-library-css'  href='/assets/css/style.min.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='bones-stylesheet-css'  href='/assets/css/screen.css' type='text/css' media='all' />
-    <script type='text/javascript' src='/assets/js/modernizr.custom.min.js'></script>
-    <script type='text/javascript' src='/assets/js/jquery.js'></script>
-    <script type='text/javascript' src='/assets/js/jquery-migrate.min.js'></script>
+    <link rel='stylesheet' id='wp-block-library-css'  href='{{ BASE_URL }}assets/css/style.min.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='bones-stylesheet-css'  href='{{ BASE_URL }}assets/css/screen.css' type='text/css' media='all' />
+    <script type='text/javascript' src='{{ BASE_URL }}assets/js/modernizr.custom.min.js'></script>
+    <script type='text/javascript' src='{{ BASE_URL }}assets/js/jquery.js'></script>
+    <script type='text/javascript' src='{{ BASE_URL }}assets/js/jquery-migrate.min.js'></script>
     <!-- REST endpoint for static website?
         <link rel='https://api.w.org/' href='https://bonsai.uno/wp-json/' />
     -->
