Break up some templates

--- a/templates/data-pipeline.html
+++ b/templates/data-pipeline.html
@@ -1,4 +1,4 @@
-{% with title="BONSAI Home" %}
+{% with title="BONSAI Ontology" %}
     {% include '_html_head.html' %}
 {% endwith %}
 
@@ -6,18 +6,7 @@
 
 <body class="home page-template-default page page-id-24">
     <header class="page-head" role="banner">
-
         {% include '_top_menu.html' %}
-
-        <div class="band band--header band--has-icon">
-            <div class="wrapper">
-                <p class="band__headline">An organisation dedicated to create and maintain a truly <strong>global Open Source Database for product footprinting</strong><img src="{{ BASE_URL }}assets/images/bonsai-icon-1395311038.svg" class="band__icon"></p>
-                <p class="band__button">
-                    <a href="/wp-content/uploads/bonsai-short.pdf" class="btn  btn--secondary">Download <span class="hide-tiny">short</span> presentation</a>
-                    <a href="/contribute/" class="btn">Contribute</a>
-                </p>
-            </div>
-        </div>
     </header>
 
     <div class="page-content">
